cmake_minimum_required(VERSION 3.2)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-O2 -Wall -Wextra")
project(opengl_assignment)
add_executable(tree tree.cpp)
add_executable(primitives primitives.cpp)
find_package(OpenGL REQUIRED)
find_package(glfw3 REQUIRED)
include_directories( ${OPENGL_INCLUDE_DIRS})
target_link_libraries(tree ${OPENGL_LIBRARIES} glfw)
target_link_libraries(primitives ${OPENGL_LIBRARIES} glfw)
